welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:7: error: not found: value dsessiner
	dsessiner();
        ^