welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {
	for (i<- 0 to 3) faireV();
}
def faireV() {
	avance();
	dsessiner();
	avance();
	gauche();
	avance();
	dessiner();
	recule();
	droite();
	avance();
	dessiner();
	avance();
	gauche();
}
def dessiner() {
	baisseBrosse();
	leveBrosse();
}
